fix(retro-achievements): Fix subset toggle buttons using wrong color

--- a/styles/retro-achievements/catppuccin.user.less
+++ b/styles/retro-achievements/catppuccin.user.less
@@ -203,6 +203,10 @@
         .bg-zinc-900\/50 {
             background-color: @crust;
         }
+        /* Subset toggle */
+        .data-\[state\=checked\]\:bg-text[data-state="checked"] {
+            background-color:@accent
+        }
         //
         // Download page
         // https://retroachievements.org/downloads
